--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "json": "^11.0.0",
     "json-server": "^1.0.0-alpha.23",
     "rxjs": "~7.8.0",
+    "server": "^1.0.38",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
