--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.3",
     "json": "^11.0.0",
     "json-server": "^1.0.0-alpha.23",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "server": "^1.0.38",
     "tslib": "^2.3.0",
